--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
     <script src="js/vendor/jquery-1.11.2.min.js"></script>
-    <script src="js/scripts.js"></script>
+    <script src="js/min/scripts-min.js"></script>
 
     <link rel="stylesheet" href="css/normalize.min.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -32,7 +32,7 @@
     <link rel="icon" type="image/png" href="favicon.png" sizes="16x16"/>
     <link rel="stylesheet" href="css/jquery.fancybox.css">
     <link rel="stylesheet" href="css/flexslider.css">
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/min/styles.css">
     <link rel="stylesheet" href="css/queries.css">
     <link rel="stylesheet" href="css/etline-font.css">
     <link rel="stylesheet" href="css/animate.css">
