Semantic check: div to header.

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 <![endif]-->
 <div class="hero">
     <div class="navigation">
-        <div class="header-inner">
+        <header class="header-inner">
             <div class="header-content">
                 <div class="logo"><a href="/"><img src="img/wng-logo-reversed.svg" alt="World Nomads logo"></a></div>
                 <div class="header-nav">
@@ -65,7 +65,7 @@
                     <a class="nav-toggle" href="#"><span></span></a>
                 </div>
             </div>
-        </div>
+        </header>
     </div>
     <div class="container">
         <div class="row">
